src/ExprParser.java
// $ANTLR 3.4 /home/tony/git/projetCompil/src/Expr.g 2013-01-23 20:08:52

import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class ExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "COMP", "DO", "ELSE", "END", "FLOAT", "FOR", "ID", "IF", "IN", "INT", "NEWLINE", "OR", "STRING", "THEN", "TO", "WHILE", "WS", "')'", "'*'", "'+'", "';'", "'='", "'print('"
    };

    public static final int EOF=-1;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int AND=4;
    public static final int COMP=5;
    public static final int DO=6;
    public static final int ELSE=7;
    public static final int END=8;
    public static final int FLOAT=9;
    public static final int FOR=10;
    public static final int ID=11;
    public static final int IF=12;
    public static final int IN=13;
    public static final int INT=14;
    public static final int NEWLINE=15;
    public static final int OR=16;
    public static final int STRING=17;
    public static final int THEN=18;
    public static final int TO=19;
    public static final int WHILE=20;
    public static final int WS=21;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ExprParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ExprParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return ExprParser.tokenNames; }
    public String getGrammarFileName() { return "/home/tony/git/projetCompil/src/Expr.g"; }


    /** Map variable name to Integer object holding value */
    HashMap memory = new HashMap();
    public LLVM output = new LLVM();



    // $ANTLR start "prog"
    // /home/tony/git/projetCompil/src/Expr.g:38:1: prog : stmts ;
    public final void prog() throws RecognitionException {
        try {
            // /home/tony/git/projetCompil/src/Expr.g:38:5: ( stmts )
            // /home/tony/git/projetCompil/src/Expr.g:38:9: stmts
            {
            pushFollow(FOLLOW_stmts_in_prog129);
            stmts();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "prog"



    // $ANTLR start "stmts"
    // /home/tony/git/projetCompil/src/Expr.g:40:1: stmts : ( stmt terms )+ ;
    public final void stmts() throws RecognitionException {
        try {
            // /home/tony/git/projetCompil/src/Expr.g:40:7: ( ( stmt terms )+ )
            // /home/tony/git/projetCompil/src/Expr.g:40:9: ( stmt terms )+
            {
            // /home/tony/git/projetCompil/src/Expr.g:40:9: ( stmt terms )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= ID && LA1_0 <= IF)||LA1_0==27) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/tony/git/projetCompil/src/Expr.g:40:10: stmt terms
            	    {
            	    pushFollow(FOLLOW_stmt_in_stmts143);
            	    stmt();

            	    state._fsp--;


            	    pushFollow(FOLLOW_terms_in_stmts145);
            	    terms();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "stmts"



    // $ANTLR start "stmt"
    // /home/tony/git/projetCompil/src/Expr.g:43:1: stmt : ( IF WS expr WS THEN NEWLINE stmts ( ELSE NEWLINE stmts )? END | ID '=' expr | 'print(' ID ')' );
    public final void stmt() throws RecognitionException {
        Token ID2=null;
        Token ID4=null;
        String expr1 =null;

        String expr3 =null;


        try {
            // /home/tony/git/projetCompil/src/Expr.g:43:9: ( IF WS expr WS THEN NEWLINE stmts ( ELSE NEWLINE stmts )? END | ID '=' expr | 'print(' ID ')' )
            int alt3=3;
            switch ( input.LA(1) ) {
            case IF:
                {
                alt3=1;
                }
                break;
            case ID:
                {
                alt3=2;
                }
                break;
            case 27:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // /home/tony/git/projetCompil/src/Expr.g:43:11: IF WS expr WS THEN NEWLINE stmts ( ELSE NEWLINE stmts )? END
                    {
                    match(input,IF,FOLLOW_IF_in_stmt179); 

                    match(input,WS,FOLLOW_WS_in_stmt181); 

                    pushFollow(FOLLOW_expr_in_stmt183);
                    expr1=expr();

                    state._fsp--;


                    match(input,WS,FOLLOW_WS_in_stmt185); 

                    match(input,THEN,FOLLOW_THEN_in_stmt187); 

                    match(input,NEWLINE,FOLLOW_NEWLINE_in_stmt189); 

                    pushFollow(FOLLOW_stmts_in_stmt191);
                    stmts();

                    state._fsp--;


                    // /home/tony/git/projetCompil/src/Expr.g:43:44: ( ELSE NEWLINE stmts )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==ELSE) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // /home/tony/git/projetCompil/src/Expr.g:43:45: ELSE NEWLINE stmts
                            {
                            match(input,ELSE,FOLLOW_ELSE_in_stmt194); 

                            match(input,NEWLINE,FOLLOW_NEWLINE_in_stmt196); 

                            pushFollow(FOLLOW_stmts_in_stmt198);
                            stmts();

                            state._fsp--;


                            }
                            break;

                    }


                    match(input,END,FOLLOW_END_in_stmt202); 

                    output.uncondbr(expr1);

                    }
                    break;
                case 2 :
                    // /home/tony/git/projetCompil/src/Expr.g:46:11: ID '=' expr
                    {
                    ID2=(Token)match(input,ID,FOLLOW_ID_in_stmt230); 

                    match(input,26,FOLLOW_26_in_stmt232); 

                    pushFollow(FOLLOW_expr_in_stmt234);
                    expr3=expr();

                    state._fsp--;


                     output.store((ID2!=null?ID2.getText():null), expr3);  

                    }
                    break;
                case 3 :
                    // /home/tony/git/projetCompil/src/Expr.g:48:11: 'print(' ID ')'
                    {
                    match(input,27,FOLLOW_27_in_stmt260); 

                    ID4=(Token)match(input,ID,FOLLOW_ID_in_stmt262); 

                    match(input,22,FOLLOW_22_in_stmt264); 

                     output.print((ID4!=null?ID4.getText():null)); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "stmt"



    // $ANTLR start "expr"
    // /home/tony/git/projetCompil/src/Expr.g:53:1: expr returns [String identifier] : a= boolexpr ;
    public final String expr() throws RecognitionException {
        String identifier = null;


        String a =null;


        try {
            // /home/tony/git/projetCompil/src/Expr.g:54:5: (a= boolexpr )
            // /home/tony/git/projetCompil/src/Expr.g:54:9: a= boolexpr
            {
            pushFollow(FOLLOW_boolexpr_in_expr307);
            a=boolexpr();

            state._fsp--;


            identifier = a;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return identifier;
    }
    // $ANTLR end "expr"



    // $ANTLR start "boolexpr"
    // /home/tony/git/projetCompil/src/Expr.g:57:1: boolexpr returns [String identifier] : a= compexpr ( ( WS )* ( AND | OR ) ( WS )* b= compexpr )* ;
    public final String boolexpr() throws RecognitionException {
        String identifier = null;


        String a =null;

        String b =null;


        try {
            // /home/tony/git/projetCompil/src/Expr.g:58:5: (a= compexpr ( ( WS )* ( AND | OR ) ( WS )* b= compexpr )* )
            // /home/tony/git/projetCompil/src/Expr.g:58:9: a= compexpr ( ( WS )* ( AND | OR ) ( WS )* b= compexpr )*
            {
            pushFollow(FOLLOW_compexpr_in_boolexpr342);
            a=compexpr();

            state._fsp--;


            // /home/tony/git/projetCompil/src/Expr.g:58:20: ( ( WS )* ( AND | OR ) ( WS )* b= compexpr )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==WS) ) {
                    int LA6_1 = input.LA(2);

                    if ( (LA6_1==AND||LA6_1==OR||LA6_1==WS) ) {
                        alt6=1;
                    }


                }
                else if ( (LA6_0==AND||LA6_0==OR) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/tony/git/projetCompil/src/Expr.g:58:21: ( WS )* ( AND | OR ) ( WS )* b= compexpr
            	    {
            	    // /home/tony/git/projetCompil/src/Expr.g:58:21: ( WS )*
            	    loop4:
            	    do {
            	        int alt4=2;
            	        int LA4_0 = input.LA(1);

            	        if ( (LA4_0==WS) ) {
            	            alt4=1;
            	        }


            	        switch (alt4) {
            	    	case 1 :
            	    	    // /home/tony/git/projetCompil/src/Expr.g:58:22: WS
            	    	    {
            	    	    match(input,WS,FOLLOW_WS_in_boolexpr346); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop4;
            	        }
            	    } while (true);


            	    if ( input.LA(1)==AND||input.LA(1)==OR ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    // /home/tony/git/projetCompil/src/Expr.g:58:38: ( WS )*
            	    loop5:
            	    do {
            	        int alt5=2;
            	        int LA5_0 = input.LA(1);

            	        if ( (LA5_0==WS) ) {
            	            alt5=1;
            	        }


            	        switch (alt5) {
            	    	case 1 :
            	    	    // /home/tony/git/projetCompil/src/Expr.g:58:39: WS
            	    	    {
            	    	    match(input,WS,FOLLOW_WS_in_boolexpr359); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop5;
            	        }
            	    } while (true);


            	    pushFollow(FOLLOW_compexpr_in_boolexpr365);
            	    b=compexpr();

            	    state._fsp--;


            	     

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            identifier = a;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return identifier;
    }
    // $ANTLR end "boolexpr"



    // $ANTLR start "compexpr"
    // /home/tony/git/projetCompil/src/Expr.g:61:1: compexpr returns [String identifier] : a= addition ( ( WS )* COMP ( WS )* b= addition )* ;
    public final String compexpr() throws RecognitionException {
        String identifier = null;


        Token COMP5=null;
        String a =null;

        String b =null;


        try {
            // /home/tony/git/projetCompil/src/Expr.g:62:5: (a= addition ( ( WS )* COMP ( WS )* b= addition )* )
            // /home/tony/git/projetCompil/src/Expr.g:62:9: a= addition ( ( WS )* COMP ( WS )* b= addition )*
            {
            pushFollow(FOLLOW_addition_in_compexpr401);
            a=addition();

            state._fsp--;


            // /home/tony/git/projetCompil/src/Expr.g:62:20: ( ( WS )* COMP ( WS )* b= addition )*
            loop9:
            do {
                int alt9=2;
                alt9 = dfa9.predict(input);
                switch (alt9) {
            	case 1 :
            	    // /home/tony/git/projetCompil/src/Expr.g:62:21: ( WS )* COMP ( WS )* b= addition
            	    {
            	    // /home/tony/git/projetCompil/src/Expr.g:62:21: ( WS )*
            	    loop7:
            	    do {
            	        int alt7=2;
            	        int LA7_0 = input.LA(1);

            	        if ( (LA7_0==WS) ) {
            	            alt7=1;
            	        }


            	        switch (alt7) {
            	    	case 1 :
            	    	    // /home/tony/git/projetCompil/src/Expr.g:62:22: WS
            	    	    {
            	    	    match(input,WS,FOLLOW_WS_in_compexpr405); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop7;
            	        }
            	    } while (true);


            	    COMP5=(Token)match(input,COMP,FOLLOW_COMP_in_compexpr409); 

            	    // /home/tony/git/projetCompil/src/Expr.g:62:32: ( WS )*
            	    loop8:
            	    do {
            	        int alt8=2;
            	        int LA8_0 = input.LA(1);

            	        if ( (LA8_0==WS) ) {
            	            alt8=1;
            	        }


            	        switch (alt8) {
            	    	case 1 :
            	    	    // /home/tony/git/projetCompil/src/Expr.g:62:33: WS
            	    	    {
            	    	    match(input,WS,FOLLOW_WS_in_compexpr412); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop8;
            	        }
            	    } while (true);


            	    pushFollow(FOLLOW_addition_in_compexpr418);
            	    b=addition();

            	    state._fsp--;


            	    identifier = output.condition(a, b, (COMP5!=null?COMP5.getText():null)); 

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            identifier = a;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return identifier;
    }
    // $ANTLR end "compexpr"



    // $ANTLR start "addition"
    // /home/tony/git/projetCompil/src/Expr.g:66:1: addition returns [String identifier] : a= multiplication ( '+' b= multiplication )* ;
    public final String addition() throws RecognitionException {
        String identifier = null;


        String a =null;

        String b =null;


        try {
            // /home/tony/git/projetCompil/src/Expr.g:67:5: (a= multiplication ( '+' b= multiplication )* )
            // /home/tony/git/projetCompil/src/Expr.g:67:9: a= multiplication ( '+' b= multiplication )*
            {
            pushFollow(FOLLOW_multiplication_in_addition460);
            a=multiplication();

            state._fsp--;


             identifier = a; 

            // /home/tony/git/projetCompil/src/Expr.g:68:5: ( '+' b= multiplication )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==24) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /home/tony/git/projetCompil/src/Expr.g:68:7: '+' b= multiplication
            	    {
            	    match(input,24,FOLLOW_24_in_addition484); 

            	    pushFollow(FOLLOW_multiplication_in_addition488);
            	    b=multiplication();

            	    state._fsp--;


            	     identifier = output.addition(identifier, b); 

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return identifier;
    }
    // $ANTLR end "addition"



    // $ANTLR start "multiplication"
    // /home/tony/git/projetCompil/src/Expr.g:71:1: multiplication returns [String identifier] : a= atom ( '*' b= atom )* ;
    public final String multiplication() throws RecognitionException {
        String identifier = null;


        String a =null;

        String b =null;


        try {
            // /home/tony/git/projetCompil/src/Expr.g:72:5: (a= atom ( '*' b= atom )* )
            // /home/tony/git/projetCompil/src/Expr.g:72:9: a= atom ( '*' b= atom )*
            {
            pushFollow(FOLLOW_atom_in_multiplication522);
            a=atom();

            state._fsp--;


             identifier = a; 

            // /home/tony/git/projetCompil/src/Expr.g:73:9: ( '*' b= atom )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==23) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // /home/tony/git/projetCompil/src/Expr.g:73:11: '*' b= atom
            	    {
            	    match(input,23,FOLLOW_23_in_multiplication550); 

            	    pushFollow(FOLLOW_atom_in_multiplication554);
            	    b=atom();

            	    state._fsp--;


            	     identifier = output.multiply(identifier, b); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return identifier;
    }
    // $ANTLR end "multiplication"



    // $ANTLR start "atom"
    // /home/tony/git/projetCompil/src/Expr.g:76:1: atom returns [String identifier] : (a= INT |a= ID );
    public final String atom() throws RecognitionException {
        String identifier = null;


        Token a=null;

        try {
            // /home/tony/git/projetCompil/src/Expr.g:77:5: (a= INT |a= ID )
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==INT) ) {
                alt12=1;
            }
            else if ( (LA12_0==ID) ) {
                alt12=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);

                throw nvae;

            }
            switch (alt12) {
                case 1 :
                    // /home/tony/git/projetCompil/src/Expr.g:77:9: a= INT
                    {
                    a=(Token)match(input,INT,FOLLOW_INT_in_atom584); 

                     identifier = (a!=null?a.getText():null); 

                    }
                    break;
                case 2 :
                    // /home/tony/git/projetCompil/src/Expr.g:78:9: a= ID
                    {
                    a=(Token)match(input,ID,FOLLOW_ID_in_atom602); 

                     identifier = output.load((a!=null?a.getText():null)); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return identifier;
    }
    // $ANTLR end "atom"



    // $ANTLR start "terms"
    // /home/tony/git/projetCompil/src/Expr.g:81:1: terms : ( term )+ ;
    public final void terms() throws RecognitionException {
        try {
            // /home/tony/git/projetCompil/src/Expr.g:81:6: ( ( term )+ )
            // /home/tony/git/projetCompil/src/Expr.g:82:6: ( term )+
            {
            // /home/tony/git/projetCompil/src/Expr.g:82:6: ( term )+
            int cnt13=0;
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==NEWLINE||LA13_0==25) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /home/tony/git/projetCompil/src/Expr.g:82:6: term
            	    {
            	    pushFollow(FOLLOW_term_in_terms626);
            	    term();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt13 >= 1 ) break loop13;
                        EarlyExitException eee =
                            new EarlyExitException(13, input);
                        throw eee;
                }
                cnt13++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "terms"



    // $ANTLR start "term"
    // /home/tony/git/projetCompil/src/Expr.g:84:1: term : ( ';' | NEWLINE );
    public final void term() throws RecognitionException {
        try {
            // /home/tony/git/projetCompil/src/Expr.g:85:5: ( ';' | NEWLINE )
            // /home/tony/git/projetCompil/src/Expr.g:
            {
            if ( input.LA(1)==NEWLINE||input.LA(1)==25 ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "term"

    // Delegated rules


    protected DFA9 dfa9 = new DFA9(this);
    static final String DFA9_eotS =
        "\5\uffff";
    static final String DFA9_eofS =
        "\5\uffff";
    static final String DFA9_minS =
        "\2\4\2\uffff\1\4";
    static final String DFA9_maxS =
        "\1\31\1\25\2\uffff\1\25";
    static final String DFA9_acceptS =
        "\2\uffff\1\2\1\1\1\uffff";
    static final String DFA9_specialS =
        "\5\uffff}>";
    static final String[] DFA9_transitionS = {
            "\1\2\1\3\11\uffff\2\2\4\uffff\1\1\3\uffff\1\2",
            "\1\2\1\3\12\uffff\1\2\1\uffff\1\2\2\uffff\1\4",
            "",
            "",
            "\1\2\1\3\12\uffff\1\2\4\uffff\1\4"
    };

    static final short[] DFA9_eot = DFA.unpackEncodedString(DFA9_eotS);
    static final short[] DFA9_eof = DFA.unpackEncodedString(DFA9_eofS);
    static final char[] DFA9_min = DFA.unpackEncodedStringToUnsignedChars(DFA9_minS);
    static final char[] DFA9_max = DFA.unpackEncodedStringToUnsignedChars(DFA9_maxS);
    static final short[] DFA9_accept = DFA.unpackEncodedString(DFA9_acceptS);
    static final short[] DFA9_special = DFA.unpackEncodedString(DFA9_specialS);
    static final short[][] DFA9_transition;

    static {
        int numStates = DFA9_transitionS.length;
        DFA9_transition = new short[numStates][];
        for (int i=0; i<numStates; i++) {
            DFA9_transition[i] = DFA.unpackEncodedString(DFA9_transitionS[i]);
        }
    }

    class DFA9 extends DFA {

        public DFA9(BaseRecognizer recognizer) {
            this.recognizer = recognizer;
            this.decisionNumber = 9;
            this.eot = DFA9_eot;
            this.eof = DFA9_eof;
            this.min = DFA9_min;
            this.max = DFA9_max;
            this.accept = DFA9_accept;
            this.special = DFA9_special;
            this.transition = DFA9_transition;
        }
        public String getDescription() {
            return "()* loopback of 62:20: ( ( WS )* COMP ( WS )* b= addition )*";
        }
    }
 

    public static final BitSet FOLLOW_stmts_in_prog129 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_stmt_in_stmts143 = new BitSet(new long[]{0x0000000002008000L});
    public static final BitSet FOLLOW_terms_in_stmts145 = new BitSet(new long[]{0x0000000008001802L});
    public static final BitSet FOLLOW_IF_in_stmt179 = new BitSet(new long[]{0x0000000000200000L});
    public static final BitSet FOLLOW_WS_in_stmt181 = new BitSet(new long[]{0x0000000000004800L});
    public static final BitSet FOLLOW_expr_in_stmt183 = new BitSet(new long[]{0x0000000000200000L});
    public static final BitSet FOLLOW_WS_in_stmt185 = new BitSet(new long[]{0x0000000000040000L});
    public static final BitSet FOLLOW_THEN_in_stmt187 = new BitSet(new long[]{0x0000000000008000L});
    public static final BitSet FOLLOW_NEWLINE_in_stmt189 = new BitSet(new long[]{0x0000000008001800L});
    public static final BitSet FOLLOW_stmts_in_stmt191 = new BitSet(new long[]{0x0000000000000180L});
    public static final BitSet FOLLOW_ELSE_in_stmt194 = new BitSet(new long[]{0x0000000000008000L});
    public static final BitSet FOLLOW_NEWLINE_in_stmt196 = new BitSet(new long[]{0x0000000008001800L});
    public static final BitSet FOLLOW_stmts_in_stmt198 = new BitSet(new long[]{0x0000000000000100L});
    public static final BitSet FOLLOW_END_in_stmt202 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_ID_in_stmt230 = new BitSet(new long[]{0x0000000004000000L});
    public static final BitSet FOLLOW_26_in_stmt232 = new BitSet(new long[]{0x0000000000004800L});
    public static final BitSet FOLLOW_expr_in_stmt234 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_27_in_stmt260 = new BitSet(new long[]{0x0000000000000800L});
    public static final BitSet FOLLOW_ID_in_stmt262 = new BitSet(new long[]{0x0000000000400000L});
    public static final BitSet FOLLOW_22_in_stmt264 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_boolexpr_in_expr307 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_compexpr_in_boolexpr342 = new BitSet(new long[]{0x0000000000210012L});
    public static final BitSet FOLLOW_WS_in_boolexpr346 = new BitSet(new long[]{0x0000000000210010L});
    public static final BitSet FOLLOW_set_in_boolexpr350 = new BitSet(new long[]{0x0000000000204800L});
    public static final BitSet FOLLOW_WS_in_boolexpr359 = new BitSet(new long[]{0x0000000000204800L});
    public static final BitSet FOLLOW_compexpr_in_boolexpr365 = new BitSet(new long[]{0x0000000000210012L});
    public static final BitSet FOLLOW_addition_in_compexpr401 = new BitSet(new long[]{0x0000000000200022L});
    public static final BitSet FOLLOW_WS_in_compexpr405 = new BitSet(new long[]{0x0000000000200020L});
    public static final BitSet FOLLOW_COMP_in_compexpr409 = new BitSet(new long[]{0x0000000000204800L});
    public static final BitSet FOLLOW_WS_in_compexpr412 = new BitSet(new long[]{0x0000000000204800L});
    public static final BitSet FOLLOW_addition_in_compexpr418 = new BitSet(new long[]{0x0000000000200022L});
    public static final BitSet FOLLOW_multiplication_in_addition460 = new BitSet(new long[]{0x0000000001000002L});
    public static final BitSet FOLLOW_24_in_addition484 = new BitSet(new long[]{0x0000000000004800L});
    public static final BitSet FOLLOW_multiplication_in_addition488 = new BitSet(new long[]{0x0000000001000002L});
    public static final BitSet FOLLOW_atom_in_multiplication522 = new BitSet(new long[]{0x0000000000800002L});
    public static final BitSet FOLLOW_23_in_multiplication550 = new BitSet(new long[]{0x0000000000004800L});
    public static final BitSet FOLLOW_atom_in_multiplication554 = new BitSet(new long[]{0x0000000000800002L});
    public static final BitSet FOLLOW_INT_in_atom584 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_ID_in_atom602 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_term_in_terms626 = new BitSet(new long[]{0x0000000002008002L});

}